--- a/PixFeeder.xcodeproj/xcshareddata/xcschemes/PixFeeder.xcscheme
+++ b/PixFeeder.xcodeproj/xcshareddata/xcschemes/PixFeeder.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D6564B892AA94E88000E52BD"
-               BuildableName = "Mastodon.app"
-               BlueprintName = "Mastodon"
+               BuildableName = "PixFeeder.app"
+               BlueprintName = "PixFeeder"
                ReferencedContainer = "container:PixFeeder.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -35,8 +35,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D62CCCF42AAAE66A00C61CCE"
-               BuildableName = "MastodonTests.xctest"
-               BlueprintName = "MastodonTests"
+               BuildableName = "PixFeederTests.xctest"
+               BlueprintName = "PixFeederTests"
                ReferencedContainer = "container:PixFeeder.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -57,8 +57,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D6564B892AA94E88000E52BD"
-            BuildableName = "Mastodon.app"
-            BlueprintName = "Mastodon"
+            BuildableName = "PixFeeder.app"
+            BlueprintName = "PixFeeder"
             ReferencedContainer = "container:PixFeeder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -74,8 +74,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D6564B892AA94E88000E52BD"
-            BuildableName = "Mastodon.app"
-            BlueprintName = "Mastodon"
+            BuildableName = "PixFeeder.app"
+            BlueprintName = "PixFeeder"
             ReferencedContainer = "container:PixFeeder.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
